<resources>
    <string name="app_name">StudyApp</string>
    <string name="main_text">Choose Action</string>
    <string name="main_chooser">Pet Chooser</string>
    <string name="send_message">Send message</string>
    <string name="choose">Choose</string>
    <string name="choices">It`s your choice</string>
    <string name="pet_chooser">Pet chooser</string>
    <string name="hint_message">Message</string>
    <string name="send">Send</string>
    <string name="chooser_title">Send with...</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="to_label">To:</string>
    <string name="email_hint">Enter email address</string>
    <string name="subject_hint">Subject</string>
    <string name="message_hint">Message</string>
    <string name="send_button">Send</string>
    <string name="picture_and_text">picture_and_text</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="title_activity_picture_and_text">Title activity</string>
    <string name="it_s_a_duck">It`s a duck!</string>
    <string name="not_a_real_one">(not a real one)</string>
    <string name="pets_logo">Pets Logo</string>
    <string name="training_of_pets">Training Of Pets</string>
    <string name="bits_and_pizzas">Bits and pizzas</string>
    <string name="create_order">Create Order</string>
    <string name="create_order_title">Create Order</string>
    <string name="action_share">Share</string>
    <string name="show_details">Show details</string>
    <string name="title_top">Top Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_title">Title</string>
    <string name="workout_description">Description</string>
    <string name="main_workout">Workout</string>
    <string name="home_tab">Home</string>
    <string name="pizza_tab">Pizzas</string>
    <string name="pasta_tab">Pasta</string>
    <string name="store_tab">Stores</string>
    <string name="company_name">Bits and Pizzas</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="home_text">Since we open our doors in 2017, Bits and Pizzas
        has built its reputation as one of America`s best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        starting at your phone.</string>
    <string name="order_name_hint">Please enter your name</string>
    <string name="order_details_hint">Please enter your order</string>
    <string name="inbox">Inbox</string>
    <string name="cat_chat">Cat Chat</string>
    <string name="drafts">Drafts</string>
    <string name="sent_items">Sent items</string>
    <string name="trash">Trash</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="app_cat_chat_name">CatChat</string>
    <string name="user_cat_chat_name">spot@catchta.com</string>
    <string name="nav_inbox">Messages</string>
    <string name="nav_drafts">Drafts</string>
    <string name="nav_sent">Sent messages</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string-array name="pet_chooser">
        <item>cats</item>
        <item>dogs</item>
        <item>I`ll get lucky</item>
    </string-array>

    <string-array name="pets">
        <item>Cats</item>
        <item>Dogs (Not available now)</item>
        <item>Others (Not available now)</item>
    </string-array>

    <string-array name="pizzas">
        <item>Diabolo</item>
        <item>Fungi</item>
    </string-array>

    <string-array name="pasta">
        <item>Spaghetti</item>
        <item>Lasagne</item>
    </string-array>

    <string-array name="stores">
        <item>Cambrige</item>
        <item>Sebastopol</item>
    </string-array>

</resources>