<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_button_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_chooser"
        android:onClick="onClickMainChooser"/>
    <Button
        android:id="@+id/main_button_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:onClick="onClickMainMessage"/>
    <Button
        android:id="@+id/button_main_stopwatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch"
        android:onClick="onClickMainStopwatch"/>
    <Button
        android:id="@+id/button_main_picture_and_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture_and_text"
        android:onClick="onClickMainPictureAndText"/>

    <Button
        android:id="@+id/button_main_Constraint_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout"
        android:onClick="onClickMainConstraintLayout"/>

    <Button
        android:id="@+id/button_main_Training_Of_Pets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_of_pets"
        android:onClick="onClickMainTrainingOFPets"/>




</LinearLayout>

</ScrollView>